--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ body {
 }
 
 .choose-week {
-    display:flex;
+    display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     font-size: 1.2rem;
 }
 
@@ -64,8 +64,40 @@ body {
     margin: 20px 0 10px 0;
 }
 
+.monday:first-child {
+    color: rgb(59, 59, 255);
+}
+
+.monday:nth-child(2) {
+    color: rgb(108, 187, 255);
+}
+
+.monday:nth-child(3) {
+    color: rgb(255, 140, 0);
+}
+
+.monday:nth-child(4) {
+    color: rgb(255, 94, 236);
+}
+
+.monday:nth-child(5) {
+    color: rgb(51, 255, 194);
+}
+
 #day {
     margin-right: 10px;
+}
+
+#orders {
+    border-radius: 5px;
+}
+
+.plus,
+.minus {
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(62, 146, 255);
+    color: white;
 }
 
 #orders {
@@ -74,4 +106,39 @@ body {
 
 #menu {
     margin: 0 0 0 40px;
+}
+
+.specific-requests {
+    flex-direction: column;
+}
+
+.specific-requests label {
+    margin-top: 20px;
+}
+
+#requests,
+#requests:focus-visible {
+    border-radius: 10px;
+    outline: none;
+    border: solid black 2px;
+    background-color: whitesmoke;
+    margin-bottom: 20px;
+}
+
+.totalPrice {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.totalPrice .order-btn {
+    max-height: fit-content;
+    padding: 20px 20px 20px 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: rgb(62, 146, 255);
+    color: white;
+}
+
+.totalPrice button:active {
+    transform: scale(0.9);
 }
