--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    min-height: fit-content;
     margin: 0;
     padding: 0;
     display: flex;
@@ -6,8 +7,6 @@ body {
     justify-content: center;
     align-items: center;
     background-color: whitesmoke;
-    height: 100vh;
-    width: 100vw;
     font-family: "Varela Round", sans-serif;
     font-weight: 800;
     font-style: normal;
@@ -15,16 +14,16 @@ body {
 }
 
 .header {
-    height: 60px;
+    min-height: fit-content;
     width: 100%;
 }
 
 .header h1 {
-    margin: 0 0 0 20px;
+    margin: 20px 0 20px 20px;
 }
 
 .main-container {
-    height: 80%;
+    height: fit-content;
     width: 40%;
     background-color: white;
     border-radius: 30px;
