--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -3,4 +3,12 @@
         width: 90%;
         min-height: fit-content;
     }
+
+    #requests {
+        font-size: 16px;
+    }
+
+    #name {
+        font-size: 16px;
+    }
 }
