--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ body {
 }
 
 .header {
+    display: flex;
+    align-items: center;
     min-height: fit-content;
     width: 100%;
 }
@@ -28,6 +30,7 @@ body {
     background-color: white;
     border-radius: 30px;
     padding: 20px;
+    margin-bottom: 50px;
 }
 
 .main-container div {
@@ -37,7 +40,7 @@ body {
 
 .choose-week {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
 }
@@ -108,18 +111,23 @@ body {
 }
 
 .name {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .name label {
     margin-right: 20px;
+    flex-basis: 50%;
 }
 
-#name {
+#name,
+#email {
     border-radius: 5px;
     outline: none;
     border: solid black 2px;
     background-color: whitesmoke;
+    flex-basis: 50%;
 }
 
 .specific-requests {
