--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
 }
 
 .description {
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
@@ -57,6 +58,10 @@ body {
 .days {
     display: flex;
     flex-direction: column;
+}
+
+.data {
+    align-items: center;
 }
 
 .monday {
@@ -99,7 +104,7 @@ body {
 .minus {
     border-radius: 5px;
     border: none;
-    background-color: rgb(62, 146, 255);
+    background: linear-gradient(45deg, rgba(62, 146, 255, 1) 0%, rgba(148, 195, 255, 1) 100%);
     color: white;
 }
 
@@ -149,10 +154,11 @@ body {
     padding: 20px 20px 20px 20px;
     border-radius: 20px;
     border: none;
-    background-color: rgb(62, 146, 255);
+    background: linear-gradient(45deg, rgba(62, 146, 255, 1) 0%, rgba(148, 195, 255, 1) 100%);
     color: white;
     line-height: 1rem;
     font-size: large;
+    cursor: pointer;
 }
 
 .totalPrice button:active {
