--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
-    font-family: "Varela Round", sans-serif;
+    background-color: #e5e7eb;
+    font-family: MS Sans Serif, Tahoma, Verdana, Segoe UI, sans-serif;
     font-weight: 800;
     font-style: normal;
-    font-size: larger;
 }
 
 .header {
@@ -18,21 +17,46 @@ body {
     align-items: center;
     min-height: fit-content;
     width: 100%;
+    color: white;
+    background-color: #193cb8;
+    box-shadow:  inset -3px -3px #0a7de2, inset 3px 3px #05275d;
 }
 
-.header h1 {
+.header img {
+    margin-left: 20px;
+}
+
+.header h2 {
     margin: 20px 0 20px 20px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 35%;
+    margin-top: 50px;
+    padding: 20px;
+    border: 2px solid #d0d4da;
+    background-color: #f3f4f6;
+    box-shadow: inset -3px -3px #f7f7f9, inset 3px 3px #8b8c8f;
+    font-size: 0.7rem;
+    font-family: MS Sans Serif, Tahoma, Verdana, Segoe UI, sans-serif;
+
 }
 
 .main-container {
     height: fit-content;
     width: 35%;
-    background-color: whitesmoke;
-    border-radius: 30px;
     padding: 20px;
-    margin-bottom: 50px;
-    box-shadow: -0.3em -0.3em 0.5em #ffffff,
-        0.3em 0.3em 0.5em #d1cdc7;
+    margin: 20px 0 50px 0;
+    border: 2px solid #d0d4da;
+    background-color: #f3f4f6;
+    box-shadow: inset -3px -3px #f7f7f9, inset 3px 3px #8b8c8f;
+    font-family: MS Sans Serif, Tahoma, Verdana, Segoe UI, sans-serif;
+
 }
 
 .main-container div {
@@ -66,10 +90,9 @@ body {
 
 .monday {
     align-items: center;
-    border-top: black solid 2px;
-    border-bottom: black solid 2px;
+    border-bottom: #d0d4da solid 2px;
     padding: 10px 0 10px 0;
-    margin: 20px 0 10px 0;
+    margin: 0px 0 10px 0;
 }
 
 .monday:first-child {
@@ -96,20 +119,25 @@ body {
     margin-right: 10px;
 }
 
-#orders {
-    border-radius: 5px;
-}
-
 .plus,
 .minus {
-    border-radius: 5px;
     border: none;
-    background: linear-gradient(45deg, rgba(62, 146, 255, 1) 0%, rgba(148, 195, 255, 1) 100%);
-    color: white;
+    border: 2px solid #d0d4da;
+    background-color: #f3f4f6;
+    box-shadow: inset -3px -3px #f7f7f9, inset 3px 3px #8b8c8f;
 }
+
+.plus:active,
+.minus:active {
+    background-color: #99a1af;
+} 
 
 #orders {
     width: 2ch;
+    border: 2px solid #d0d4da;
+    background-color: #f3f4f6;
+    box-shadow: inset -3px -3px #f7f7f9, inset 3px 3px #8b8c8f;
+    padding: 4px;
 }
 
 #menu {
@@ -137,11 +165,13 @@ body {
 
 #requests,
 #requests:focus-visible {
-    border-radius: 10px;
     outline: none;
-    border: solid black 2px;
-    background-color: whitesmoke;
+    background-color: #f3f4f6;
     margin-bottom: 20px;
+    border: 2px solid #d0d4da;
+    background-color: #f3f4f6;
+    box-shadow: inset -3px -3px #f7f7f9, inset 3px 3px #8b8c8f;
+    padding: 5px;
 }
 
 .disclaimer {
@@ -156,15 +186,32 @@ body {
 .totalPrice .order-btn {
     max-height: fit-content;
     padding: 20px 20px 20px 20px;
-    border-radius: 20px;
-    border: none;
-    background: linear-gradient(45deg, rgba(62, 146, 255, 1) 0%, rgba(148, 195, 255, 1) 100%);
-    color: white;
     line-height: 1rem;
     font-size: large;
-    cursor: pointer;
+    border: 2px solid #d0d4da;
+    background-color: #d1d5dc;
+    box-shadow: inset -3px -3px #f7f7f9, inset 3px 3px #8b8c8f;
+    font-family: MS Sans Serif, Tahoma, Verdana, Segoe UI, sans-serif;
 }
 
 .totalPrice button:active {
     transform: scale(0.9);
+}
+
+.totalPrice button:hover {
+    background-color: #99a1af;
+}
+ 
+.footer {
+    display: flex;
+    align-items: center;
+    min-height: fit-content;
+    width: 100%;
+    color: white;
+    background-color: #193cb8;
+    box-shadow:  inset -3px -3px #0a7de2, inset 3px 3px #05275d;
+}
+
+.footer h4 {
+    margin-left: 20px;
 }
