closed for yom tov

--- a/styles.css
+++ b/styles.css
@@ -215,3 +215,9 @@ body {
 .footer h4 {
     margin-left: 20px;
 }
+
+/* --------------------------------------------------------------------------------------- */
+
+.yom-tov {
+    text-align: center;
+}
