added parasha to the header

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 .header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     min-height: fit-content;
     width: 100%;
     color: white;
@@ -22,12 +23,22 @@ body {
     box-shadow:  inset -3px -3px #0a7de2, inset 3px 3px #05275d;
 }
 
+.header-left {
+    display: flex;
+    align-items: center;
+}
+
 .header img {
     margin-left: 20px;
 }
 
 .header h2 {
-    margin: 20px 0 20px 20px;
+    margin: 20px;
+}
+
+.header h3 {
+    margin-right: 20px;
+    letter-spacing: 1px;
 }
 
 .info {
