--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 500px) {
-    .header h1 {
-        font-size: 1.7em;
+    .header h2,
+    .header h3 {
+        font-size: 1em;
     }
 
     .info {
@@ -38,7 +39,7 @@
     #orders {
         font-size: x-large;
     }
-    
+
     #requests {
         font-size: 16px;
     }
@@ -49,6 +50,6 @@
     }
 
     .footer {
-    color: white;
-}
+        color: white;
+    }
 }
