--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ body {
 }
 
 .main-container {
+    display: block;
     height: fit-content;
     width: 35%;
     padding: 20px;
@@ -144,6 +145,9 @@ body {
 } 
 
 #orders {
+    cursor: default;
+    outline: none;
+    text-align: center;
     width: 2ch;
     border: 2px solid #d0d4da;
     background-color: #f3f4f6;
@@ -230,5 +234,6 @@ body {
 /* --------------------------------------------------------------------------------------- */
 
 .yom-tov {
+    display: none;
     text-align: center;
 }
